Release notes "dita13.lc.extra-interactions" version 2.3

* Add new interaction: lceGraphicAssociate - interaction where you can reate hotspots and set relation between hotspots (drawing lines)

Release notes "dita13.lc.extra-interactions" version 2.2.1
* Changed content model of lcePerformQuestion.content: add lcOpenAnswer2


Release notes "dita13.lc.extra-interactions" version 2.2
* Add new interactions: lceChainMatching - matching items from more than two bukkets