@@ -24,7 +24,7 @@
    <xs:include schemaLocation="urn:oasis:names:tc:dita:xsd:utilitiesDomain.xsd:1.3"/>
    <xs:include schemaLocation="urn:oasis:names:tc:dita:xsd:releaseManagementDomain.xsd:1.3"/>
    <xs:include schemaLocation="urn:oasis:names:tc:dita:spec:learning:xsd:learningDomain.xsd:1.3"/>
-   <xs:include schemaLocation="urn:oasis:names:tc:dita:spec:learning:xsd:learning2Domain.xsd:1.3"/>
+   
    <xs:include
       schemaLocation="urn:oasis:names:tc:dita:spec:learning:xsd:learningMetadataDomain.xsd:1.3"/>
    <!-- add to include MathML and SVG -->
@@ -71,7 +71,7 @@
    <xs:include schemaLocation="urn:dita13lce:names:xsd:lceGraphicAssociateDomain.xsd"/>
    <xs:include schemaLocation="urn:dita13lce:names:xsd:lceMatchDomain.xsd"/>
    <xs:include schemaLocation="urn:dita13lce:names:xsd:lceEntryDomain.xsd"/>
-   <xs:include schemaLocation="urn:dita13lce:names:xsd:lceWrittenCalculationDomain.xsd"/>
+   <xs:include schemaLocation="urn:dita13lce:names:xsd:lceExplanationDomain.xsd"/>
    
    <xs:include schemaLocation="urn:dita13lce:names:xsd:lceAnswerAttsDomain.xsd"/>
    <xs:include schemaLocation="urn:dita13lce:names:xsd:lceOrientationAttsDomain.xsd"/>
@@ -117,7 +117,7 @@
             <xs:group ref="lcepuzzle-d-div"/>
             <xs:group ref="lceperforminteraction-d-div"/>
             <xs:group ref="lcegapinteraction-d-div"/>
-            <xs:group ref="lcechainmatching-d-div"/>
+            
          </xs:choice>
       </xs:group>
       <xs:group name="ph">
@@ -174,6 +174,15 @@
          </xs:choice>
       </xs:group>
    </xs:redefine>
+   
+   <xs:redefine schemaLocation="urn:oasis:names:tc:dita:spec:learning:xsd:learning2Domain.xsd:1.3">
+      <xs:group name="lcAsset2">       
+            <xs:choice>
+               <xs:group ref="lcAsset2"/>
+               <xs:group ref="lceExplanation"/>
+            </xs:choice>
+      </xs:group>
+   </xs:redefine>
 
    <xs:redefine
       schemaLocation="urn:oasis:names:tc:dita:spec:learning:xsd:learningInteractionBaseDomain.xsd:1.3">
@@ -199,7 +208,6 @@
             <xs:group ref="lceperforminteraction-d-lcInteractionBase2"/>
             <xs:group ref="lcegapinteraction-d-lcInteractionBase2"/>
             <xs:group ref="lcechainmatching-d-lcInteractionBase2"/>
-            <xs:group ref="lcewrittencalculation-d-lcInteractionBase2"/>
          </xs:choice>
       </xs:group>
    </xs:redefine>
